--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 
 .img-upload {
-    width: 30%;
-    margin: 0 auto;
+    margin-top: 100px;
 }
 
-#place {
-    margin-top: 200px;
+.container {
+    margin: 100px auto;
+    width: 50%;
+}
+
+p {
+    margin-bottom: -95px;
 }
