Added image resizing for the user

--- a/style.css
+++ b/style.css
@@ -11,3 +11,15 @@
 p {
     margin-bottom: -95px;
 }
+
+#img {
+    display: none;
+}
+
+#imgcont {
+    width: 50%;
+}
+
+#container {
+    display: flex;
+}
