--- a/style.css
+++ b/style.css
@@ -1,133 +1,138 @@
 * {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 .img-upload {
-    margin-top: 100px;
-    display: table;
-    margin: 0 auto;
+  margin-top: 100px;
+  display: table;
+  margin: 0 auto;
+}
+
+#selectResolution {
+  padding: .2rem;
 }
 
 input[type="file"] {
-    display: block !important;
-    width: 100% !important;
-    height: 100% !important;
-    opacity: 1 !important;
-    overflow: hidden !important;
-    z-index: 100 !important;
-    margin-top: 5px;
-    padding-top: -20px;
-    top: -20px;
+  display: block !important;
+  width: 100% !important;
+  height: 100% !important;
+  opacity: 1 !important;
+  overflow: hidden !important;
+  z-index: 100 !important;
+  margin-top: 5px;
+  padding-top: -20px;
+  top: -20px;
 }
 
-
 .container {
-    margin: 100px auto;
-    margin: 70px auto;
+  margin: 100px auto;
+  margin: 70px auto;
 }
 
 #cropImage {
-    margin: -50px auto;
-    display: none;
+  margin: -50px auto;
+  display: none;
 }
 
 .cr-boundary {
-    width: 50%;
+  width: 50%;
 }
 
 p {
-    margin-bottom: -95px;
+  margin-bottom: -95px;
 }
 
 #img {
-    display: none;
+  display: none;
 }
 
-#firstCanvas, #canvas {
-    display: none;
+#firstCanvas,
+#canvas {
+  display: none;
 }
 
 #btn {
-    margin-bottom: 100px;
-    cursor: pointer;
+  margin-bottom: 100px;
+  cursor: pointer;
 
 }
 
 @media all and (max-width: 1000px) {
-    .croppie-container {
-        width: max-content;
-        height: 30%;
-    }
+  .croppie-container {
+    width: max-content;
+    height: 30%;
+  }
 
-    div.cr-boundary {
-        width: 350px !important;
-        height: 350px !important;
-    }
-    #cropImage {
-        margin: -50px 0;
-    }
+  div.cr-boundary {
+    width: 350px !important;
+    height: 350px !important;
+  }
 
-    .cr-slider {
-        width: auto;
-        max-width: 350%;
-    }
+  #cropImage {
+    margin: -50px 0;
+  }
+
+  .cr-slider {
+    width: auto;
+    max-width: 350%;
+  }
 }
 
-@media all and (max-width: 370px) { 
-    .croppie-container {
-        width: 30%;
-        height: 30%;
-    }
+@media all and (max-width: 370px) {
+  .croppie-container {
+    width: 30%;
+    height: 30%;
+  }
 
-    div.cr-boundary {
-        width: 335px !important;
-        height: 335px !important;
-    }
+  div.cr-boundary {
+    width: 335px !important;
+    height: 335px !important;
+  }
 }
 
-@media all and (max-width: 320px) { 
-    div.cr-boundary {
-        width: 305px !important;
-        height: 305px !important;
-    }
+@media all and (max-width: 320px) {
+  div.cr-boundary {
+    width: 305px !important;
+    height: 305px !important;
+  }
 }
 
-@media all and (min-width: 320px) { 
-    div.cr-boundary {
-        width: 300px !important;
-        height: 300px !important;
-    }
+@media all and (min-width: 320px) {
+  div.cr-boundary {
+    width: 300px !important;
+    height: 300px !important;
+  }
 }
 
 @media all and (min-width: 370px) {
-    div.cr-boundary {
-        width: 350px !important;
-        height: 350px !important;
-    }
-} 
+  div.cr-boundary {
+    width: 350px !important;
+    height: 350px !important;
+  }
+}
 
-@media all and (min-width: 400px) { 
-    .croppie-container {
-        width: 40%;
-        height: 40%;
-    }
+@media all and (min-width: 400px) {
+  .croppie-container {
+    width: 40%;
+    height: 40%;
+  }
 
-    div.cr-boundary {
-        width: 370px !important;
-        height: 370px !important;
-    }
+  div.cr-boundary {
+    width: 370px !important;
+    height: 370px !important;
+  }
 }
 
 @media all and (min-width: 450px) {
-    div.cr-boundary {
-        width: 400px !important;
-        height: 400px !important;
-    }
- }
+  div.cr-boundary {
+    width: 400px !important;
+    height: 400px !important;
+  }
+}
 
-@media all and (min-width: 500px) { 
-    div.cr-boundary {
-        width: 450px !important;
-        height: 450px !important;
-    }
+@media all and (min-width: 500px) {
+  div.cr-boundary {
+    width: 450px !important;
+    height: 450px !important;
+  }
 }
